--- a/codeathon.css
+++ b/codeathon.css
@@ -4,15 +4,20 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;;
+    box-sizing: border-box;
 }
 
 body {
+    height: 100vh;
     background: url(autumn_backdrop.jpeg) no-repeat center center fixed;
     background-size: cover;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+
+    
+   
 }
 
 #first_box {
@@ -21,20 +26,16 @@ body {
     height: 250px;
     width: 400px;
     border: 3.79px solid black;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    margin: 2em 0;
+   
     
 }
 
 #first_box h2 {
     font-size: 60pt;
     font-family: 'Montserrat', sans-serif;
-    color: rgb(54, 42, 3); 
+    color: rgb(94, 62, 3); 
     text-align: center;
     padding: 10px;
-    margin: 1em 0;
     text-shadow: 1px 1px 1px black;
 
 }
@@ -46,7 +47,6 @@ body {
     width: 400px;
     color: black;
     border: 3.79px solid black;
-    margin: 1em; 
 }
 
 #second_box h2 {
